chore: Use emptyList instead of List.of, seperate VersionLookup logic